# Paper2BIDS

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/alzheimers_mri_pipeline/: README.md  pyproject.toml  run.py
examples/alzheimers_mri_pipeline/config/: snakebids.yml
examples/alzheimers_mri_pipeline/workflow/: Snakefile
src/paper2bids/: __init__.py  cli.py  core.py  models.py
src/paper2bids/analyzers/: __init__.py  code.py  methodology.py
src/paper2bids/generators/: __init__.py  snakebids.py
src/paper2bids/parsers/: __init__.py  paper.py  repository.py
src/paper2bids/templates/: __init__.py  config.jinja2  run_py.jinja2  snakefile.jinja2
tests/: __init__.py  test_models.py  test_parsers.py
