[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper2bids"
version = "0.1.0"
description = "Transform neuroimaging papers and their code into reproducible snakebids applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Paper2BIDS Contributors" }
]
keywords = [
    "neuroimaging",
    "BIDS",
    "snakebids",
    "reproducibility",
    "workflow",
    "pipeline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "httpx>=0.25",
    "pypdf>=3.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
paper2bids = "paper2bids.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/paper2bids"
Documentation = "https://paper2bids.readthedocs.io"
Repository = "https://github.com/yourorg/paper2bids"

[tool.hatch.build.targets.wheel]
packages = ["src/paper2bids"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
